fix: remove overlapping between elements in products

--- a/space-elephant.css
+++ b/space-elephant.css
@@ -287,7 +287,7 @@ section {
   background-position-y: 100%;
   background-color: #F99400;
   color: white;
-  padding: 10% 30px;
+  padding: 30px;
   flex: 1;
   margin: 10px;
   position: relative;
